--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS repeat course</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="body" class="body mainBody" data-value="value" data-time="time">
+  <section class="elements-1">
+    <h2 class="sectionTitle section-1">Elements 1</h2>
+    <ul>
+      <li>
+        text
+        <a href="#">link-1</a>
+      </li>
+      <li id="currentItem" class="currentItem" data-atrr="currentItem">
+        <a href="#">link-2</a>
+      </li>
+      <li>
+        <a href="#">link-3</a>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2 class="sectionTitle section-2">Elements 2</h2>
+    <ul>
+      <li>
+        <a href="#">link-1</a>
+      </li>
+      <li id="1" class="currentItem" data-atrr="currentItem">
+        <a href="#">link-2</a>
+      </li>
+      <li>
+        <a href="#">link-3</a>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2 class="sectionTitle section-3">Elements 3</h2>
+    <ul>
+      <li>
+        <a href="#">link-1</a>
+      </li>
+      <li id="2" class="currentItem" data-atrr="currentItem">
+        <a href="#">link-2</a>
+      </li>
+      <li>
+        <a href="#">link-3</a>
+      </li>
+    </ul>
+  </section>
   <script src="./index.js" type="module"></script>
   <!-- <script src="./this.js"></script> -->
 </body>
