--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body id="body" class="body mainBody" data-value="value" data-time="time">
-  <section class="elements-1">
+  <section class="elements-1 section">
     <h2 class="sectionTitle section-1">Elements 1</h2>
     <ul>
       <li>
@@ -23,7 +23,7 @@
       </li>
     </ul>
   </section>
-  <section>
+  <section class="section">
     <h2 class="sectionTitle section-2">Elements 2</h2>
     <ul>
       <li>
@@ -37,7 +37,7 @@
       </li>
     </ul>
   </section>
-  <section>
+  <section class="section">
     <h2 class="sectionTitle section-3">Elements 3</h2>
     <ul>
       <li>
